--- a/랜트/진행사항.md
+++ b/랜트/진행사항.md
@@ -2,9 +2,8 @@
 
 1. 보유 데이터 현황 파악
    * 데이터의 구조 파악 
-2. 분석 주제 및 방법론 설정
-
-
+2. 배달의 민족 로그분석 가이드라인
+3. 분석 주제 설정 전, 로그 데이터 구조 파악
 
 # 보유데이터 현황
 
@@ -72,7 +71,7 @@
 
      
 
-# 분석 주제 및 방법론 설정
+# 배달의 민족 로그 데이터 분석 가이드라인
 
 * ### 로그 데이터
 
@@ -146,3 +145,35 @@
     * 기타 영역
       * 영업 및 CS 관련 대응
       * 사업 및 투자 성과 진단
+
+
+
+## 분석 주제 설정 전, 로그 데이터 구조 파악
+
+#### 배제하는 것
+
+1. 작품·조경수·자재
+2. 포토갤러리
+3. 커뮤니티
+4. 고객센터
+
+#### 봐야하는 것
+
+1. 게시글의 본문 내용
+2. 사용자가 언제 들어왔는지(session start)
+3. 사용자가 여러 개의 창을 띄었을 경우
+4. 사용자가 언제 나갔는지(창을 닫았는지)
+5. 사용자가 무슨 게시글을 보았는지
+6. 로그인은 했는지
+7. 광고는 보았는지
+8. 광고의 내용
+9. 검색했는지: 언제, 무슨 검색어를 검색했는지
+10. --- 이게 의미하는게 무엇인지
+
+
+
+
+
+
+
+https://www.youtube.com/watch?v=G5tedDl8uH8&ab_channel=EPASSKOREA
