샴푸&두피케어  체험평가단, 리눅스 크롤링

--- a/데이타플로우/Jupyter/01. 데이터 수집__샴푸&두피케어 크롤링.ipynb
+++ b/데이타플로우/Jupyter/01. 데이터 수집__샴푸&두피케어 크롤링.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d1fd481c",
    "metadata": {},
    "outputs": [],
@@ -21,250 +21,17 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By"
+    "from selenium.webdriver.common.by import By\n",
+    "# from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service as ChromeService"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0abaee5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clawringContentImage(href):\n",
-    "    response = requests.get(href)\n",
-    "    \n",
-    "    if response.status_code == 200:\n",
-    "        html = response.text\n",
-    "        soup = BeautifulSoup(html, 'html.parser')\n",
-    "        \n",
-    "        res = soup.find('h3', {'id' : 'view_content'})\n",
-    "        content = res.text\n",
-    "        images = res.find_all('img', {'class' : 'lazy content-image'})\n",
-    "\n",
-    "        if images != []:\n",
-    "            imageList = [url['data-original'] for url in res.find_all('img', {'class' : 'lazy content-image'})]\n",
-    "        else:\n",
-    "            imageList = []\n",
-    "        return content, imageList\n",
-    "    \n",
-    "    else:\n",
-    "        return np.nan, []    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d239ee51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parsing_save(re):\n",
-    "    re = BeautifulSoup(re, 'html.parser')\n",
-    "    category = re.find('a', {'class' : 'mw_basic_list_category'}).text\n",
-    "    date = re.find('div', {'class' : 'mw_basic_list_datetime media-no-text'}).text\n",
-    "    view = re.find('div', {'class' : 'mw_basic_list_hit media-no-text'}).text\n",
-    "    title = re.find('h3', {'class' : 'media-list-subject flex'}).text.replace('\\n', '')\n",
-    "    rank = str(re.find('img')['src']).split('/')[-1].split('.')[0]\n",
-    "    href = re.find_all('a')[1]['href']\n",
-    "    try:\n",
-    "        writer = re.find('a', {'class' : 'sv_member'}).text.strip()\n",
-    "    except:\n",
-    "        writer = re.find('div', {'mw_basic_list_name media-no-text'}).text\n",
-    "    content, imageList = clawringContentImage(href)\n",
-    "\n",
-    "    with open(save_path, 'a', newline = '') as csvfile:\n",
-    "        csvWriter = csv.DictWriter(csvfile, fieldnames = fieldNames)\n",
-    "        \n",
-    "        try:\n",
-    "            csvWriter.writerow({'title' : title,\n",
-    "                                'category' : category,\n",
-    "                                'date' : date,\n",
-    "                                'writer' : writer,\n",
-    "                                'rank' : rank,\n",
-    "                                'view' : view,\n",
-    "                                'href' : href,\n",
-    "                                'content' : content,\n",
-    "                                'imageList' : imageList})      \n",
-    "        except:\n",
-    "            print(href, ': Error')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "111f83ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clawringHref01(url, pageNum, startPage = 1):\n",
-    "    errorNum = 0\n",
-    "\n",
-    "    if not os.path.isfile(save_path):\n",
-    "        tmp = pd.DataFrame(columns = fieldNames)\n",
-    "        tmp.to_csv(save_path, index = False)\n",
-    "        \n",
-    "        with open(save_path, 'w', newline = '') as csvfile:\n",
-    "            csvWriter = csv.DictWriter(csvfile, fieldnames = fieldNames)\n",
-    "            csvWriter.writeheader()\n",
-    "\n",
-    "    for page in tqdm(range(startPage, pageNum + 1)):\n",
-    "        page = str(page)\n",
-    "        response = requests.get(url + page)\n",
-    "        if response.status_code == 200:\n",
-    "            html = response.text\n",
-    "            soup = BeautifulSoup(html, 'html.parser')\n",
-    "            re_list = soup.find_all('div', {\"class\":\"list_wrap flex_spbtw\"})            \n",
-    "            re_list = [str(re) for re in re_list]\n",
-    "\n",
-    "            for re in re_list:\n",
-    "                parsing_save(re)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55ee5cf1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e649b9b4",
-   "metadata": {},
-   "source": [
-    "### 대다모 크롤링 대상\n",
-    "* 샴푸&두피케어\n",
-    "    * 샴푸&두피제품 찾기\n",
-    "    * 체험평가단\n",
-    "* 탈모톡톡\n",
-    "    * 탈모수다 : (완)\n",
-    "    * 샴푸&영양제 : (완)\n",
-    "* 탈모후기\n",
-    "    * 탈모치료성공스토리"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d734b983",
-   "metadata": {},
-   "source": [
-    "1. 머리말 : category\n",
-    "2. 제목 : title\n",
-    "3. 작성자 : writer\n",
-    "4. 작성일 : date\n",
-    "5. 조회수 : view\n",
-    "6. 링크 : href\n",
-    "7. 계급 : rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee38c575",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_save = 'href_탈모톡톡_탈모수다.csv'\n",
-    "path_save_base = '../Data'\n",
-    "save_path = os.path.join(path_save_base, path_save)\n",
-    "fieldNames = ['title', 'category', 'date', 'writer', 'rank', 'view', 'href', 'content', 'imageList']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cbd6a16",
-   "metadata": {},
-   "source": [
-    "#### 탈모톡톡_탈모수다"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d99b889",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://daedamo.com/story?overlaps=1&page='\n",
-    "path_save = 'href_탈모톡톡_탈모수다.csv'\n",
-    "fieldNames = ['title', 'category', 'date', 'writer', 'rank', 'view', 'href', 'content', 'imageList']\n",
-    "pageNum = 2\n",
-    "startPage = 1\n",
-    "clawringHref01(url, pageNum, startPage)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "553f04b9",
-   "metadata": {},
-   "source": [
-    "#### 탈모톡톡_샴푸&영양제"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0512466",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://daedamo.com/balmo?overlaps=1&page='\n",
-    "path_save = 'href_탈모톡톡_샴푸&영양제.csv'\n",
-    "fieldNames = ['title', 'category', 'date', 'writer', 'rank', 'view', 'href', 'content', 'imageList']\n",
-    "pageNum = 120\n",
-    "\n",
-    "clawringHref01(url, pageNum, path_save, fieldNames, startPage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68e1e233",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdeabade",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91239d5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c76e6522",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "6372f06b",
    "metadata": {},
    "source": [
-    "# 샴푸&두피케어-샴푸&두피케어\n",
-    "이거 같은 경우에는, 로그인을 해야하며, "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2d8470b",
-   "metadata": {},
-   "source": [
-    "### selenium"
+    "# 샴푸&두피케어_샴푸&두피제품 찾기"
    ]
   },
   {
@@ -582,7 +349,193 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2da0fe9",
+   "id": "10648b26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218e4851",
+   "metadata": {},
+   "source": [
+    "# 샴푸&두피케어_체험평가단"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "50b13513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clawringHref(url, pageNum, chrome_options, startPage = 1):\n",
+    "    if not os.path.isfile(save_path):\n",
+    "        tmp = pd.DataFrame(columns = fieldNames)\n",
+    "        tmp.to_csv(save_path, index = False, encoding = 'utf-8-sig', header=fieldNames)\n",
+    "\n",
+    "    for page in tqdm(range(startPage, pageNum + 1)):\n",
+    "        page = str(page)\n",
+    "        for _ in range(3):\n",
+    "            try:\n",
+    "                response = requests.get(url + page)\n",
+    "                if response.status_code == 200:\n",
+    "                    html = response.text\n",
+    "                    soup = BeautifulSoup(html, 'html.parser')\n",
+    "                    \n",
+    "                    notice_list = soup.find_all('div', {'class' : ['notice_wrap']})\n",
+    "                    re_list = soup.find_all('div', {'class' : ['list_wrap']})\n",
+    "                    re_list = [str(re) for re in re_list]\n",
+    "                    \n",
+    "                    for re in re_list:\n",
+    "                        parsing_save(re, chrome_options)\n",
+    "                    break\n",
+    "            except requests.exceptions.ConnectionError:\n",
+    "                time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5d18d32e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parsing_save(re, chrome_options):\n",
+    "    re = BeautifulSoup(re, 'html.parser')\n",
+    "    category = re.find('div', {'class' : 'mw_basic_list_category'}).text\n",
+    "    date = re.find('div', {'class' : 'mw_basic_list_datetime media-no-text'}).text\n",
+    "    view = re.find('div', {'class' : 'mw_basic_list_hit media-no-text'}).text\n",
+    "    title = re.find('h3', {'class' : 'media-list-subject'}).text.replace('\\n', '')\n",
+    "    rank = str(re.find('img')['src']).split('/')[-1].split('.')[0]\n",
+    "    href = re.find_all('a')[2]['href']\n",
+    "    \n",
+    "    print(href)\n",
+    "    \n",
+    "    try:\n",
+    "        writer = re.find('a', {'class' : 'sv_member'}).text.strip()\n",
+    "    except:\n",
+    "        writer = re.find('div', {'mw_basic_list_name media-no-text'}).text\n",
+    "\n",
+    "    content, imageList = clawringContentImage(href, chrome_options)\n",
+    "\n",
+    "    try:\n",
+    "        pd.DataFrame({'title' : [title],\n",
+    "                      'category' : [category],\n",
+    "                      'date' : [date],\n",
+    "                      'writer' : [writer],\n",
+    "                      'rank' : [rank],\n",
+    "                      'view' : [view],\n",
+    "                      'href' : [href],\n",
+    "                      'content' : [content.strip()],\n",
+    "                      'imageList' : [imageList]}).to_csv(save_path,\n",
+    "                                                         mode = 'a',\n",
+    "                                                         index = False,\n",
+    "                                                         header = False,\n",
+    "                                                         encoding = 'utf-8-sig')\n",
+    "    except:\n",
+    "        print({'title' : title,\n",
+    "                'category' : category,\n",
+    "                'date' : date,\n",
+    "                'writer' : writer,\n",
+    "                'rank' : rank,\n",
+    "                'view' : view,\n",
+    "                'href' : href,\n",
+    "                'content' : content,\n",
+    "                'imageList' : imageList})\n",
+    "        print(href, ': Error', '\\n')\n",
+    "        print('==================================================================')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ad19a946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clawringContentImage(href, chrome_options):\n",
+    "    driver = webdriver.Chrome()\n",
+    "    driver.get(href)\n",
+    "    driver.implicitly_wait(np.random.rand(1)[0])\n",
+    "    html = driver.page_source\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    res = soup.find('div', {'class' : 'mw_basic_view_content'})\n",
+    "\n",
+    "    try:\n",
+    "        content = res.text\n",
+    "    except:\n",
+    "        return np.nan, []\n",
+    "\n",
+    "    images = res.find_all('img', {'class' : 'lazy content-image'})\n",
+    "\n",
+    "    if images != []:\n",
+    "        imageList = [url['src'] for url in res.find_all('img', {'class' : 'lazy'})]\n",
+    "    else:\n",
+    "        imageList = []\n",
+    "\n",
+    "    return content, imageList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3b336277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chrome_options = webdriver.ChromeOptions()\n",
+    "chrome_options.add_argument('--headless')\n",
+    "chrome_options.add_experimental_option(\"detach\", True) \n",
+    "chrome_options.add_argument('--no-sandbox')\n",
+    "chrome_options.add_argument('--disabled-dev-shm-usage')\n",
+    "chrome_options.add_argument('--blink-settings=imagesEnabled=false')\n",
+    "chrome_options.add_argument('Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec3171a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62f99c299e4446ce8515b82d3e353884",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/39 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://daedamo.com/job/4616?overlaps=5\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_save_base = '../Data'\n",
+    "fieldNames = ['title', 'category', 'date', 'writer', 'rank', 'view', 'href', 'content', 'imageList']\n",
+    "\n",
+    "path_save = '샴푸&두피케어_체험평가단.csv'\n",
+    "save_path = os.path.join(path_save_base, path_save)\n",
+    "url = 'https://daedamo.com/job?overlaps=5&page='\n",
+    "pageNum = 39\n",
+    "clawringHref(url, pageNum, chrome_options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6629a4ca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b13513",
+   "id": "a9e9f7dd",
    "metadata": {},
    "outputs": [],
    "source": []
